# proteus

./: Cargo.toml  README.md  about.hbs  about.toml
.github/workflows/: build.yml  release.yml
lua/: analog_clock.lua  bounce_circle.lua  digital_clock.lua  meeting_cost.lua  text_demo.lua
lua/contraption/: main.lua
lua/contraption/chambers/: accelerator.lua  conveyor.lua  pong.lua  teleporter.lua  trampoline.lua
lua/rube_goldberg/: main.lua
lua/rube_goldberg/chambers/: accelerator.lua  antigravity.lua  bumper.lua  conveyor.lua  funnel.lua  magnet.lua  mixer.lua  pegs.lua  pong.lua  seesaw.lua  splitter.lua  stairs.lua  teleporter.lua  tesla_coil.lua  trampoline.lua  (+1 more)
shaders/: background_ascii.frag  background_black.frag  background_blur.frag  background_color_cycle.frag  background_crt.frag  background_glitch.frag  background_halftone.frag  background_image.frag  background_matrix.frag  background_pixelate.frag  background_pumpkin.frag  background_synthwave.frag  background_transition.frag  background_wave.frag  background_zippy_zaps.frag  bounce_screen.frag  clones.frag  crt.frag  cyberpunk_scanner.frag  debug_mask.frag  edge_detection.frag  face_ascii.frag  gameboy.frag  glitch.frag  glitch_reveal.frag  glowing_outline.frag  grayscale.frag  green_screen.frag  hide_person.frag  hologram.frag  hud_corner.frag  invert.frag  passthrough.frag  person_spin.frag  pixelate.frag  plasma.frag  posterize.frag  psychedelic.frag  retro_4color.frag  ripple.frag  (+10 more)
src/: config_utils.rs  frame.rs  lib.rs  main.rs  utils.rs
src/capture/: mod.rs  nokhwa_backend.rs
src/lua_canvas/: gpu_canvas.rs  mod.rs
src/ml/: mod.rs
src/output/: mod.rs  virtual_camera.rs  virtual_camera_linux.rs  virtual_camera_macos.rs  virtual_camera_windows.rs  window_output.rs
src/shader/: gpu_context.rs  mod.rs  wgpu_pipeline.rs
src/video/: mod.rs
(+5 files in other folders)
