[package]
name = "proteus"
version = "0.1.0"
edition = "2021"
description = "Cross-platform shader webcam transformer"

[dependencies]
wgpu = "24"
winit = "0.30"
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
naga = { version = "24", features = ["glsl-in", "wgsl-out"] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
