[package]
name = "proteus"
version = "0.3.0"
edition = "2021"
description = "Cross-platform shader webcam transformer"

[features]
default = ["cuda", "rocm"]
cuda = ["ort/cuda"]
rocm = ["ort/rocm"]

[dependencies]
wgpu = "28"
winit = "0.30"
naga = { version = "28", features = ["glsl-in", "wgsl-out"] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
image = "0.25"
ndarray = "0.15"
notify = "8.2.0"


[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
ort = { version = "2.0.0-rc.9", features = ["ndarray", "coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10", features = ["input-msmf"] }
windows = { version = "0.62", features = ["Win32_System_Memory", "Win32_Foundation"] }
ort = { version = "2.0.0-rc.9", features = ["ndarray", "directml"] }

[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10", features = ["input-v4l"] }
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
libc = "0.2"
